# mentormesh-ai-core

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
