[project]
name = "mentormesh-ai-core"
version = "0.1.0"
description = "MentorMesh AI Core: production-grade multi-agent learning orchestration engine using LangGraph, MCP-style tools, A2A services, Ollama, Langfuse, DeepEval, and FastAPI."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"